production build cleanup

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -492,52 +492,22 @@ div.timeline-event-label {
     margin: 3px 0px 0px 3px;
 }
 
-
-// ----------------------------------------------------------
-// old, for clean-up
-
-
-
-
-/* book place view */
-
-
-/* About Us page */
-#about-us-view {
-    display: block;
-}
-#about-us-view div.content {
-    padding: 1em 2em 2em 2em;
-    height: 85%;
-    overflow: auto;
-    max-width: 600px;
-}
-
-
-
-/* info window styles */
-div.infowindow {
+// info window styles
+.infowindow {
     height: 8em;
     width: 280px;
+    
+    h3 {
+        margin: 0 0 1em 0;
+    }
+    p {
+        margin: 0 0 1em 0;
+    }
+    span.zoom {
+        font-size: .6em;
+    }
+    .pagenum {
+        color: #999;
+        font-style: italic;
+    }
 }
-div.infowindow  h3 {
-    margin: 0 0 1em 0;
-}
-div.infowindow p {
-    margin: 0 0 1em 0;
-}
-div.infowindow  span.zoom {
-    font-size: .6em;
-}
-div.pagenum {
-    color: #999;
-    font-style: italic;
-}
-
-
-
-
-
-
-// eventually, delete
-div.topview { display: none; }
