Fixing style images

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -37,21 +37,6 @@ h1, h4 {
 p {
     font-family: @serifFontFamily;
 }
-/*
-ul {
-    margin: 0 0 1em 0;
-    padding: 0 0 0 1.5em;
-}
-li {
-    margin: 0 0 .5em 0;
-}
-a {
-    &:link, &:visited { color: @linkColor; }
-    &:hover, &:active { color: @linkColorHover; }
-}
-em {
-    font-style: italic;
-} */
 
 // ---------------------------------------------------
 // Header and Footer
@@ -184,7 +169,7 @@ footer {
 
 // loading spinner
 .loading {
-    background-image: url(../images/blue-loading.gif);
+    background-image: url(images/blue-loading.gif);
     background-repeat: no-repeat;
     background-position: 50% 50%;
 }
@@ -481,10 +466,10 @@ footer {
             cursor: pointer;
         }
         &.timeline-play {
-            background-image: url(../images/play.png);
+            background-image: url(images/play.png);
         }
         &.timeline-stop {
-            background-image: url(../images/stop.png);
+            background-image: url(images/stop.png);
         }
     }
 }
