--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -226,7 +226,7 @@ footer {
     }
     
     &.hi {
-    background: yellow;
+        background: yellow;
     }
 }
 
@@ -375,13 +375,13 @@ footer {
         margin: 0 0 .5em 0;
     }
 }
-.related-places-view {
-    p {
-        font-size: .88em;
-    }
+.related-places-view, .book-refs-view {
     h4 {
         margin-top: 0;
     }
+}
+.related-places-view p {
+    font-size: .88em;
 }
 
 // flickr photos
