Fixing book references, refreshing place view on book and place changes

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -172,6 +172,7 @@ footer {
     background-image: url(images/blue-loading.gif);
     background-repeat: no-repeat;
     background-position: 50% 50%;
+    min-height: 80px;
 }
 
 .panel {
