Tweaks and test for change form

--- a/app/templates/place-summary-template.html
+++ b/app/templates/place-summary-template.html
@@ -6,5 +6,6 @@
 <div></div>
 <ul>
     <li><a href="<%= uri %>" target="_blank">Place page on Pleiades</a></li>
-    <li><a href="http://pelagios.dme.ait.ac.at/api/places/http%3A%2F%2Fpleiades.stoa.org%2Fplaces%2F<%= id %>" target="_blank">References in Pelagios</a></li>
+    <li><a href="http://pelagios.dme.ait.ac.at/api/places/http%3A%2F%2Fpleiades.stoa.org%2Fplaces%2F<%= id %>" target="_blank">References in Pelagios</a>
+    </li>
 </ul>
