Adding edit view for flagged places

--- a/css/gapvis.less
+++ b/css/gapvis.less
@@ -497,3 +497,21 @@ div.timeline-event-label {
         font-style: italic;
     }
 }
+
+
+// ---------------------------------------------------
+// Editing interface styles
+// ---------------------------------------------------
+
+.flag-edit-view {
+    form {
+        margin: 1em 0;
+        padding: .5em 1em;
+        width: inherit;
+        background: whiteSmoke;
+    }
+    label.checkbox.toggle {
+        font-style: italic;
+        color: #999;
+    }
+}
