--- a/lib/bootstrap/less/bootstrap.less
+++ b/lib/bootstrap/less/bootstrap.less
@@ -23,7 +23,7 @@
 // Base CSS
 @import "type.less";
 // @import "code.less";
-// @import "forms.less";
+@import "forms.less";
 // @import "tables.less";
 
 // Components: common
@@ -47,7 +47,7 @@
 
 // Components: Popovers
 @import "modals.less";
-// @import "tooltip.less";
+@import "tooltip.less";
 // @import "popovers.less";
 
 // Components: Misc
